--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,16 @@
 body {
   background-color: Black;
+  font-family: Verdana;
+  color: White;
+  text-align: center;
+}
+
+h1 {
+  font-weight: normal;
+  font-size: 50px;
+}
+
+a {
+  color: Aquamarine;
+  font-size: 16px;
 }
