--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -10,7 +10,22 @@ h1 {
   font-size: 50px;
 }
 
+h2 {
+  font-weight: 300;
+  font-size: 42px;
+}
+
 a {
   color: Aquamarine;
   font-size: 16px;
+}
+
+p {
+  color: Gray;
+  font-size: 21px;
+}
+
+.footer {
+  text-align: right;
+  color: Gray;
 }
